# screendrafts2jellyfin

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/screendraft2jellyfin/: cli.py  fandom.py  jellyfin.py  title_utils.py
tests/: test_fandom_parse.py  test_title_utils.py
